#add_subdirectory(Base) add_subdirectory(ConEqu) add_subdirectory(Contorno) add_subdirectory(Correlacao) add_subdirectory(Estatistica) add_subdirectory(FFT) add_subdirectory(Filtro) add_subdirectory(Funcao) add_subdirectory(Geometria) add_subdirectory(Grafico) add_subdirectory(Grafo) add_subdirectory(Integral) add_subdirectory(Interpolacao) add_subdirectory(Mascara) add_subdirectory(Material) add_subdirectory(Matriz) add_subdirectory(Permeabilidade) add_subdirectory(Reconstrucao) add_subdirectory(Rotulador) add_subdirectory(SFuncao) add_subdirectory(SMatriz) add_subdirectory(Tempo)

add_library (ldsc STATIC
  Base/CSolver.cpp
  Base/CSimulacao.cpp
  Base/COperacao.cpp
  Base/CMath.cpp
  Base/CFuncao.cpp
  ConEqu/CConfiguracoesEquilibrio2D.cpp
  ConEqu/CConfiguracoesEquilibrio3D.cpp
  ConEqu/CCamara.cpp
  ConEqu/CCamara2D.cpp
  ConEqu/CCamara3D.cpp
  Contorno/CContornoCentro.cpp
  Contorno/CContorno.cpp
  Correlacao/CCorrelacao.cpp
  Correlacao/CCorrelacao3D.cpp
  Correlacao/CCorrelacaoEspacial.cpp
  Correlacao/CCorrelacaoFFT.cpp
  Distribuicao/CBaseDistribuicao.cpp
  Distribuicao/CDistribuicao.cpp
  Distribuicao/CDistribuicao3D.cpp
  Estatistica/CERandomico.cpp
  Estatistica/CEstatistica.cpp
  Estatistica/CEFatorial.cpp
  Estatistica/CECombinacoes.cpp
  Estatistica/CEMomentos.cpp
  Estatistica/CENormal.cpp
  Estatistica/CETStudent.cpp
  Estatistica/CEChiQuadrado.cpp
  Estatistica/CEFSnedecor.cpp
  Estatistica/CEIntervalosConfianca.cpp
  Estatistica/CETesteMediaDuasAmostras.cpp
  FFT/CFFT.cpp
  FFT/CFFTPropriedades.cpp
  Filtro/TCFiltro.h
  Filtro/TCFiltro3D.h
  Filtro/FAmplitude/CFABDoisPicos.cpp
  Filtro/FAmplitude/CFABinario.cpp
  Filtro/FAmplitude/CFABMedia.cpp
  Filtro/FAmplitude/CFABVarianciaOtsu.cpp
  Filtro/FAmplitude/CFAmplitude.cpp
  Filtro/FAmplitude/CFABEntropiaJohansen.cpp
  Filtro/FAmplitude/CFABIterativoThrussel.cpp
  Filtro/FAmplitude/CFABPixelContorno.cpp
  Filtro/FAmplitude/CFACinza.cpp
  Filtro/FEspacial/TCFEspacial.h
  Filtro/FEspacial/CFEBartlet.cpp
  Filtro/FEspacial/CFEDeteccaoContornoMasc.cpp
  Filtro/FEspacial/CFEGaussiano.cpp
  Filtro/FEspacial/TCFEPassaAlta.h
  Filtro/FEspacial/CFEBorda.cpp
  Filtro/FEspacial/CFEEliminaBorda.cpp
  Filtro/FEspacial/CFELaplaciano.cpp
  Filtro/FEspacial/TCFEPassaBaixa.h
  Filtro/FEspacial/CFEBSubstitueValor.cpp
  Filtro/FEspacial/CFEEmboss.cpp
  Filtro/FEspacial/CFEPassaAlta2.cpp
  Filtro/FEspacial/CFERotacaoVerticalEDiferenca.cpp
  Filtro/FEspacial/FEDeteccaoContorno/CFEDCCanny.cpp
  Filtro/FEspacial/FEDeteccaoContorno/CFEDCMarrHildreth.cpp
  Filtro/FEspacial/FEDeteccaoContorno/CFEDCShenCastan.cpp
  Filtro/FEspacial/FEDeteccaoContorno/CFEDeteccaoContorno.cpp
  Filtro/FEspacial/FEEsqueleto/CFEEsqueleto.cpp
  Filtro/FEspacial/FEEsqueleto/CFEEsqueletoV1.cpp
  Filtro/FEspacial/FEEsqueleto/CFEEsqueletoV2.cpp
  Filtro/FEspacial/FEEsqueleto/CFEEsqueletoV3.cpp
  Filtro/FEspacial/FEEsqueleto/CFEEsqueletoV4.cpp
  Filtro/FEspacial/FEEsqueleto/CFEEzhangsuen.cpp
  Filtro/FEspacial/FEInversao/CFEInversao.cpp
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMorfologiaMatematica.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDF.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFdj.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFdijk.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFdij.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFdi.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFEuclidiana.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFd8.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFd5711.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFd4.h
  Filtro/FEspacial/FEMorfologiaMatematica/TCFEMMIDFd34.h
  Filtro/FEspacial3D/TCFEspacial3D.h
  Filtro/FEspacial3D/CFEBorda3D.cpp
  Filtro/FEspacial3D/CFEBSubstitueValor3D.cpp
  Filtro/FEspacial3D/FEConectividade3D/TCFEConectividade3D.h
  Filtro/FEspacial3D/FEInversao3D/CFEInversao3D.cpp
  Filtro/FEspacial3D/FEMorfologiaMatematica3D/TCFEMMIDF3D.h
  Filtro/FEspacial3D/FEMorfologiaMatematica3D/TCFEMMIDFd3453D.h
  Filtro/FEspacial3D/FEMorfologiaMatematica3D/TCFEMMIDFdijk3D.h
  Filtro/FEspacial3D/FEMorfologiaMatematica3D/TCFEMMIDFEuclidiana3D.h
  Filtro/FEspacial3D/FEMorfologiaMatematica3D/TCFEMorfologiaMatematica3D.h
  Filtro/FReconstrucao/CFReconstrucao.cpp
  Funcao/CFChebyshev.cpp
  Funcao/CFGamma.cpp
  Funcao/CFLegendre.cpp
  Funcao/CFPolinomio.cpp
  Funcao/CFBesselJ.cpp
  Funcao/CFCi.cpp
  Funcao/CFHermite.cpp
  Funcao/CFNaoLinearRzRy.cpp
  Funcao/CFSi.cpp
  Funcao/CFBesselY.cpp
  Funcao/CFEi.cpp
  Funcao/CFIterativa.cpp
  Funcao/CFPHermite.cpp
  Funcao/CFSomatorioCm2RyM.cpp
  Funcao/CFBeta.cpp
  Funcao/CFErf.cpp
  Funcao/CFLaguerre.cpp
  Funcao/CFPHermiteRec.cpp
  Funcao/CFuncoesEspeciais.cpp
  Geometria/Bola/BCDiscreta/CBCdi.cpp
  Geometria/Bola/BCDiscreta/CBCdj.cpp
  Geometria/Bola/BCDiscreta/CBCdij.cpp
  Geometria/Bola/BCDiscreta/CBCdijk.cpp
  Geometria/Bola/BCDiscreta/CBCd4.cpp
  Geometria/Bola/BCDiscreta/CBCd8.cpp
  Geometria/Bola/BCDiscreta/CBCd34.cpp
  Geometria/Bola/BCDiscreta/CBCd5711.cpp
  Geometria/Bola/BCDiscreta/CBCDiscreta.cpp
  Geometria/Bola/BCDiscreta/CBCEuclidiana.cpp
  Geometria/Bola/BCDiscreta3D/CBCd3453D.cpp
  Geometria/Bola/BCDiscreta3D/CBCdijk3D.cpp
  Geometria/Bola/BCDiscreta3D/CBCDiscreta3D.cpp
  Geometria/Bola/BCDiscreta3D/CBCEuclidiana3D.cpp
  Grafico/Gnuplot/CGnuplot.cpp
  Grafo/CObjetoGrafo.cpp
  Grafo/COGComponenteGrafo.cpp
  Grafo/COGLigacao.cpp
  Grafo/COGSitio.cpp
  Grafo/COGSitioDireita.cpp
  Grafo/COGSitioDirLRCM.cpp
  Grafo/COGSitioEsquerda.cpp
  Grafo/COGSitioEsqLR.cpp
  Grafo/COGSitioEsqLRCM.cpp
  Grafo/COGSitioLR.cpp
  Grafo/COGSitioDirLR.cpp
  Grafo/COGSitioLRCM.cpp
  Grafo/CGrafo.cpp
  Grafo/CGrafoContorno.cpp
  Grafo/CGra3Dby2D_M2.cpp
  Grafo/CGra3Dby2D_M3.cpp
  Grafo/CGra3Dby2D_M6.cpp
  Grafo/CGra3Dby2D_M4.cpp
  Grafo/CGra3Dby2D.cpp
  Grafo/CGra3Dby2D_M5.cpp
  Grafo/CGra3Dby2D_M1.cpp
  Integral/CIGauss.cpp
  Integral/CIGHermiteQuadrature.cpp
  Integral/CIGLegendreQuadrature.cpp
  Integral/CIGChebyshevQuadrature.cpp
  Integral/CIGLaguerreQuadrature.cpp
  Integral/CIntegral.cpp
  Integral/CISimpson.cpp
  Interpolacao/CIntLagrange.cpp
  Interpolacao/CINewtonDiff.cpp
  Interpolacao/CINewtonDivDiff.cpp
  Interpolacao/CIntBarycentric.cpp
  Interpolacao/CIntCubSpline.cpp
  Interpolacao/CIntEDBarycentric.cpp
  Interpolacao/CInterpolacao.cpp
  Interpolacao/IntMetNum/CIntMetNum.cpp
  Interpolacao/IntMetNum/CIMNDiferencasCentrais.cpp
  Interpolacao/IntMetNum/CIMNExata.cpp
  Interpolacao/IntMetNum/CIMNUpwind.cpp
  Interpolacao/IntMetNum/CIMNWuds.cpp
  Interpolacao/Interpolacao2D/CInterpolacao2D.cpp
  Interpolacao/Interpolacao2D/CInt2DBilinear.cpp
  Mascara/CMascara.cpp
  Mascara/CMPassaBaixa.cpp
  Mascara/CMPAssaAlta.cpp
  Mascara/CMBartlet.cpp
  Mascara/CMEmboss.cpp
  Mascara/CMLaplaciano.cpp
  Mascara/CMDeteccaoContorno.cpp
  Mascara/CMGaussiano.cpp
  Mascara/CMPassaAlta2.cpp
  Mascara/CMRotacaoVerticaleDiferenca.cpp
  Mascara/CMascara3D.cpp
  Mascara/CMPassaBaixa3d.cpp
  Mascara/MCDiscreta/CMCDiscreta.cpp
  Mascara/MCDiscreta/CMCdi.cpp
  Mascara/MCDiscreta/CMCd4.cpp
  Mascara/MCDiscreta/CMCd8.cpp
  Mascara/MCDiscreta/CMCdij.cpp
  Mascara/MCDiscreta/CMCd34.cpp
  Mascara/MCDiscreta/CMCdijk.cpp
  Mascara/MCDiscreta/CMCd5711.cpp
  Mascara/MCDiscreta/CMCEuclidiana.cpp
  Material/CMFluido.cpp
  Matriz/CImg.cpp
  Matriz/TCImagem3D.h
  Matriz/CImagem.cpp
  Matriz/CHistograma.cpp
  Matriz/CVetor.cpp
  Matriz/TCMatriz2D.h
  Matriz/TCMatriz3D.h
  Matriz/CBaseMatriz.cpp
  Permeabilidade/CPermeabilidade.cpp
  Permeabilidade/CPermeabilidadeGrafo.cpp
  Permeabilidade/CPermeabilidadeIntrinseca.cpp
  Permeabilidade/CPermeabilidadeRelativa.cpp
  Reconstrucao/CReconstrucao.cpp
  Reconstrucao/CReconstrucaoBueno.cpp
  Reconstrucao/CReconstrucaoEsferas.cpp
  Reconstrucao/CReconstrucaoZhirong.cpp
  Rotulador/CRotulador.cpp
  Rotulador/CRotulador2D.cpp
  Rotulador/CRotulador2DCm.cpp
  Rotulador/CConectividade2D.cpp
  Rotulador/TCRotulador3D.h
  Rotulador/CConectividade3D.cpp
  SFuncao/CSFBissecao.cpp
  SFuncao/CSFCordas.cpp
  SFuncao/CSFuncao.cpp
  SFuncao/CSFNewton.cpp
  SFuncao/CSFRichmond.cpp
  SMatriz/CSMatriz.cpp
  SMatriz/CSMParametroSolver.cpp
  SMatriz/SMDiagonal/CSMDGaussSeidel.cpp
  SMatriz/SMDiagonal/CSMDSOR.cpp
  SMatriz/SMDiagonal/CSMDiagonalDominante.cpp
  SMatriz/SMDiagonal/CSMDJacobi.cpp
  SMatriz/SMDiagonal/CSMDiagonalDominanteThreads.cpp
  Tempo/CTime.cpp
)
